--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.10
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.2
 	loader_version=0.14.22
+	carpet_core_version=1.4.119
 
 # Mod Properties
 	mod_version = 1.0-SNAPSHOT
@@ -14,7 +15,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.87.0+1.20.1
+	fabric_version=0.89.3+1.20.2
 	loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 	loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 	loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
