--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven {
+        url "https://maven.terraformersmc.com/releases"
+    }
 }
 
 dependencies {
@@ -22,7 +25,8 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modImplementation "com.github.gnembon:fabric-carpet:${project.carpet_core_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    // modImplementation "com.github.gnembon:fabric-carpet:${project.carpet_core_version}"
 }
 
 processResources {
