--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ org.gradle.jvmargs=-Xmx1G
 	minecraft_version=1.20.2
 	yarn_mappings=1.20.2+build.2
 	loader_version=0.14.22
-	carpet_core_version=1.4.119
+	# carpet_core_version=1.4.119
+	modmenu_version=8.0.0
 
 # Mod Properties
 	mod_version = 1.0-SNAPSHOT
