--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ version = project.mod_version
 group = project.maven_group
 
 loom {
-    accessWidenerPath = file("src/main/resources/waypoints.accesswidener")
+    accessWidenerPath = file("src/main/resources/${archives_base_name}.accesswidener")
 }
 
 repositories {
