--- a/gradle.properties
+++ b/gradle.properties
@@ -3,27 +3,20 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
+	minecraft_version=1.21.1
+	yarn_mappings=1.21.1+build.3
+	loader_version=0.16.5
 
-	minecraft_version=1.20.2
-	yarn_mappings=1.20.2+build.4
-	loader_version=0.14.24
-	# carpet_core_version=1.4.119
+	# Fabric API
+	fabric_version=0.105.0+1.21.1
 
 
 # Mod Properties
-	mod_version = 0.0.1-SNAPSHOT
-	maven_group = net.unknownbits
+	mod_version = 1.0-SNAPSHOT
+	maven_group = top.unknownbits
 	archives_base_name = sync-waypoint
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.90.7+1.20.2
-	modmenu_version=8.0.0
 
-	accessWidener = "src/main/resources/waypoints.accesswidener"
-
-	loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-	loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-	loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
-	loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-	loom_fabric_repository=https://repository.hanbings.io/proxy/
+	modmenu_version=11.0.2
