--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,18 @@ org.gradle.jvmargs=-Xmx1G
 
 	minecraft_version=1.20.2
 	yarn_mappings=1.20.2+build.4
-	loader_version=0.14.24
+	loader_version=0.16.5
 	# carpet_core_version=1.4.119
 
 
 # Mod Properties
 	mod_version = 0.0.1-SNAPSHOT
-	maven_group = net.unknownbits
+	maven_group = top.unknownbits
 	archives_base_name = sync-waypoint
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.90.7+1.20.2
+	fabric_version=0.91.6+1.20.2
 	modmenu_version=8.0.0
 
 	accessWidener = "src/main/resources/waypoints.accesswidener"
